--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,7 +1,15 @@
+# Create a stable NuGet release.
+
 name: Create release
 
 on:
   workflow_call:
+    inputs:
+      generate_release_notes:
+        description: 'Generates release notes from the commits since the last release and new contributors and adds them to the GitHub page.'
+        required: false
+        type: boolean
+        default: false
 
 jobs:
 
@@ -13,6 +21,8 @@ jobs:
   release-flow:
     needs: compute-version
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     
     steps:
       - uses: actions/checkout@v3
@@ -77,6 +87,15 @@ jobs:
           # We keep the support branch for bug and security fixes.
           git checkout support/${{ env.NUGET_VERSION }}
           git push origin support/${{ env.NUGET_VERSION }}
+
+      # Automatically create release notes on the GitHub page.
+      # They are assembled from commit messages and contributors.
+      - name: Create Release Notes
+        if: inputs.generate_release_notes
+        uses: ncipollo/release-action@v1.12.0
+        with:
+          generateReleaseNotes: true
+          tag: release/${{ needs.compute-version.outputs.package_version }}
           
   build-and-publish:
     needs: release-flow
