--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -40,6 +40,7 @@ jobs:
           # Setup bot user who will own the commits. We use the 'GitHub Actions Bot'.
           git config user.name github-actions
           git config user.email github-actions@github.com
+          echo ${{ needs.compute-version.outputs.version_type }}
 
       - name: Create support branch
         if: ${{ needs.compute-version.outputs.version_type == 'major' }}
