--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -34,7 +34,6 @@ jobs:
       - name: Save NuGet version to a variable for easy access.
         run: |
           echo "NUGET_VERSION=${{ needs.compute-version.outputs.package_version }}" >> $GITHUB_ENV
-          echo ${{ needs.compute-version.outputs.semver_raise_type }}
 
       - name: Setup git config
         run: |
@@ -49,11 +48,10 @@ jobs:
           git checkout main
           echo Looking for last release...
           # Get the last release tag.
-          git describe --tags --abbrev=0 --match=release/*
-          $lastVersion = git describe --tags --abbrev=0 --match=release/*
+          lastVersion=$( git describe --tags --abbrev=0 --match=release/* )
           # Cut off 'release/' and the fix version.
-          $supportVersion = $lastVersion -replace '.\d$',''
-          $supportVersion = $supportVersion -replace 'release/',''
+          supportVersion=${lastVersion/release\//''}
+          supportVersion==${supportVersion%.*}
           echo Last release was $lastVersion. Creating branch...
           # Create the support branch at the position of the last release tag.
           git checkout -b support/$supportVersion $lastVersion
