--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -17,9 +17,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Fail if not on develop
-        run: exit 1
+        run: |
+          echo We are on branch ${{ github.ref_name }}. Do run from 'develop' only! Failing...
+          exit 1
   
   compute-version:
+    needs: fail-if-wrong-branch
     uses: ./.github/workflows/gitversion.yml
     with:
       is_prerelease: false
